[package]
name = "testgen"
version = "0.0.1"
authors = ["repnop <repnop@outlook.com>"]
description = "A proc macro crate to generate a variety of test functions."
repository = "https://github.com/rep-nop/testgen"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["test", "testing", "test generation"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["full"] }
quote = "0.6.9"
proc-macro2 = { version = "0.4.20", features = ["nightly"] }